--- a/Vennalake.html
+++ b/Vennalake.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kaas Plateau – Tourably</title>
+    <title>Venna Lake – Tourably</title>
 
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
@@ -49,8 +49,8 @@
       /* HERO */
       .hero {
         height: 90vh;
-        background: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.7)),
-          url("/Images/kaas.jpg") center/cover no-repeat;
+        background: linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.7)),
+          url("/Images/venna_hero.jpg") center/cover no-repeat;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -233,20 +233,14 @@
       .final-cta h2 {
         margin-bottom: 12px;
       }
-
-      .hero{
-        background-image:   url(/Images/kass1.png);
-        background-repeat: no-repeat;
-        background-size: cover;
-      }
     </style>
   </head>
   <body>
     <!-- HERO -->
     <div class="hero">
       <div>
-        <h1>Kaas Plateau</h1>
-        <p>UNESCO World Natural Heritage • Maharashtra’s Valley of Flowers</p>
+        <h1>Venna Lake</h1>
+        <p>Serene Lake & Tourist Spot • Satara, Maharashtra</p>
         <a href="#packages" class="btn green">View Packages</a>
         <a href="#about" class="btn outline">Explore More</a>
       </div>
@@ -255,28 +249,26 @@
     <!-- INFO BAR -->
     <div class="info-bar">
       <div class="info-item">
-        <span> Distance</span><strong>24 km from Satara</strong>
+        <span>📍 Distance</span><strong>2 km from Satara</strong>
       </div>
       <div class="info-item">
-        <span> Best Time</span><strong>Aug – Oct</strong>
+        <span>🕒 Best Time</span><strong>Oct – Feb</strong>
       </div>
       <div class="info-item">
-        <span> Entry Fee</span><strong>₹100 – ₹150</strong>
+        <span>🎟 Entry Fee</span><strong>₹30 – ₹50</strong>
       </div>
       <div class="info-item">
-        <span> Category</span><strong>Nature</strong>
+        <span>🌿 Category</span><strong>Lake & Leisure</strong>
       </div>
     </div>
 
     <!-- ABOUT -->
     <section id="about" class="about">
       <div class="container">
-        <h2>About Kaas Plateau</h2>
+        <h2>About Venna Lake</h2>
         <p class="muted">
-          Kaas Plateau is a seasonal wonderland near Satara, where thousands of
-          endemic wildflowers bloom during monsoon. Recognized as a UNESCO World
-          Natural Heritage Site, it offers unmatched biodiversity, photography
-          opportunities, and peaceful nature experiences.
+          Venna Lake is a beautiful artificial lake in Satara, surrounded by hills and gardens. 
+          Popular for boating, leisure walks, and local snacks, it is a perfect spot for families and tourists seeking relaxation.
         </p>
       </div>
     </section>
@@ -286,9 +278,9 @@
       <div class="container">
         <h2>Gallery</h2>
         <div class="gallery-grid">
-          <img src="/Images/kassV2.avif" />
-          <img src="/Images/kassV3.jpeg" />
-          <img src="/Images/KassV4.jpg" />
+          <img src="/Images/venna1.jpg" />
+          <img src="/Images/venna2.jpg" />
+          <img src="/Images/venna3.jpg" />
         </div>
       </div>
     </section>
@@ -299,7 +291,7 @@
         <h2>Location & Route</h2>
         <div class="map">
           <iframe
-            src="https://www.google.com/maps?q=Kaas%20Plateau,%20Maharashtra&output=embed"
+            src="https://www.google.com/maps?q=Venna%20Lake,%20Satara&output=embed"
             loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"
           ></iframe>
@@ -313,20 +305,20 @@
         <h2>Choose Your Experience</h2>
         <div class="package-grid">
           <div class="package-card">
-            <h3>Single Spot Visit</h3>
-            <p class="muted">Perfect for short and peaceful exploration</p>
-            <div class="price">₹500 – ₹700</div>
-            <a href="/HTML/book.html?place=kaas&type=single" class="btn green"
-              >Book Single Visit</a
+            <h3>Lake Visit</h3>
+            <p class="muted">Relax by the lake and enjoy leisure walks</p>
+            <div class="price">₹100 – ₹200</div>
+            <a href="/HTML/book.html?place=venna&type=visit" class="btn green"
+              >Book Lake Visit</a
             >
           </div>
 
           <div class="package-card">
-            <h3>Full Satara Scenic Tour</h3>
-            <p class="muted">Includes Kaas, Thoseghar & Chalkewadi</p>
-            <div class="price">₹5000</div>
-            <a href="/HTML/book.html?place=kaas&type=full" class="btn green"
-              >Book Full Tour</a
+            <h3>Boating & Snacks</h3>
+            <p class="muted">Boat ride and enjoy local snacks by the lake</p>
+            <div class="price">₹300</div>
+            <a href="/HTML/book.html?place=venna&type=full" class="btn green"
+              >Book Full Experience</a
             >
           </div>
         </div>
@@ -340,13 +332,13 @@
         <div class="review-grid">
           <div class="review">
             <div class="stars">★★★★★</div>
-            <p>Absolutely magical during monsoon. A must visit.</p>
-            <strong>— Rohit, Pune</strong>
+            <p>Peaceful and perfect for evening boating!</p>
+            <strong>— Priya, Satara</strong>
           </div>
           <div class="review">
             <div class="stars">★★★★☆</div>
-            <p>Beautiful and peaceful. Well managed.</p>
-            <strong>— Anjali, Mumbai</strong>
+            <p>Lovely lake with good food stalls and walking area.</p>
+            <strong>— Rohit, Pune</strong>
           </div>
         </div>
       </div>
@@ -354,7 +346,7 @@
 
     <!-- FINAL CTA -->
     <div class="final-cta">
-      <h2>Ready to Explore Kaas Plateau?</h2>
+      <h2>Ready to Explore Venna Lake?</h2>
       <p>Choose your package and start your journey with Tourably</p>
       <a href="#packages" class="btn outline">Book Now</a>
     </div>
