--- a/Wilsonpoint.html
+++ b/Wilsonpoint.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kaas Plateau – Tourably</title>
+    <title>Wilson Point – Tourably</title>
 
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
@@ -50,7 +50,7 @@
       .hero {
         height: 90vh;
         background: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.7)),
-          url("/Images/kaas.jpg") center/cover no-repeat;
+          url("/Images/wilson1.jpg") center/cover no-repeat;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -116,7 +116,6 @@
         font-size: 1.05rem;
       }
 
-      /* SECTIONS */
       section {
         padding: 80px 20px;
       }
@@ -135,17 +134,10 @@
         color: var(--muted);
       }
 
-      /* ABOUT */
       .about {
         background: var(--bg-soft-green);
       }
 
-      .about p {
-        max-width: 800px;
-        font-size: 1.05rem;
-      }
-
-      /* GALLERY */
       .gallery {
         background: var(--bg-soft-blue);
       }
@@ -164,7 +156,6 @@
         box-shadow: var(--shadow);
       }
 
-      /* MAP */
       .map iframe {
         width: 100%;
         height: 420px;
@@ -173,7 +164,6 @@
         box-shadow: var(--shadow);
       }
 
-      /* PACKAGES */
       .packages {
         background: var(--bg-soft-yellow);
       }
@@ -189,9 +179,6 @@
         border-radius: var(--radius);
         box-shadow: var(--shadow);
         padding: 32px;
-        display: flex;
-        flex-direction: column;
-        gap: 16px;
       }
 
       .price {
@@ -200,15 +187,8 @@
         color: var(--green);
       }
 
-      /* REVIEWS */
       .reviews {
         background: var(--bg-soft-blue);
-      }
-
-      .review-grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-        gap: 24px;
       }
 
       .review {
@@ -222,31 +202,21 @@
         color: var(--yellow);
       }
 
-      /* FINAL CTA */
       .final-cta {
         background: linear-gradient(135deg, #16a34a, #22c55e);
         color: #fff;
         text-align: center;
         padding: 80px 20px;
       }
-
-      .final-cta h2 {
-        margin-bottom: 12px;
-      }
-
-      .hero{
-        background-image:   url(/Images/kass1.png);
-        background-repeat: no-repeat;
-        background-size: cover;
-      }
     </style>
   </head>
+
   <body>
     <!-- HERO -->
     <div class="hero">
       <div>
-        <h1>Kaas Plateau</h1>
-        <p>UNESCO World Natural Heritage • Maharashtra’s Valley of Flowers</p>
+        <h1>Wilson Point</h1>
+        <p>Highest Point of Mahabaleshwar • Famous Sunrise Viewpoint</p>
         <a href="#packages" class="btn green">View Packages</a>
         <a href="#about" class="btn outline">Explore More</a>
       </div>
@@ -255,28 +225,28 @@
     <!-- INFO BAR -->
     <div class="info-bar">
       <div class="info-item">
-        <span> Distance</span><strong>24 km from Satara</strong>
+        <span>📍 Location</span><strong>Mahabaleshwar</strong>
       </div>
       <div class="info-item">
-        <span> Best Time</span><strong>Aug – Oct</strong>
+        <span>🕒 Best Time</span><strong>Oct – June (Sunrise)</strong>
       </div>
       <div class="info-item">
-        <span> Entry Fee</span><strong>₹100 – ₹150</strong>
+        <span>🎟 Entry Fee</span><strong>₹20 – ₹30</strong>
       </div>
       <div class="info-item">
-        <span> Category</span><strong>Nature</strong>
+        <span>🌄 Category</span><strong>View Point</strong>
       </div>
     </div>
 
     <!-- ABOUT -->
     <section id="about" class="about">
       <div class="container">
-        <h2>About Kaas Plateau</h2>
+        <h2>About Wilson Point</h2>
         <p class="muted">
-          Kaas Plateau is a seasonal wonderland near Satara, where thousands of
-          endemic wildflowers bloom during monsoon. Recognized as a UNESCO World
-          Natural Heritage Site, it offers unmatched biodiversity, photography
-          opportunities, and peaceful nature experiences.
+          Wilson Point is the highest point in Mahabaleshwar and the only place
+          where you can witness both sunrise and sunset. Surrounded by lush
+          greenery and cool mountain air, it offers breathtaking panoramic views
+          of the Sahyadri ranges.
         </p>
       </div>
     </section>
@@ -286,9 +256,9 @@
       <div class="container">
         <h2>Gallery</h2>
         <div class="gallery-grid">
-          <img src="/Images/kassV2.avif" />
-          <img src="/Images/kassV3.jpeg" />
-          <img src="/Images/KassV4.jpg" />
+          <img src="/Images/wilson2.jpg" />
+          <img src="/Images/wilson3.jpg" />
+          <img src="/Images/wilson4.jpg" />
         </div>
       </div>
     </section>
@@ -299,9 +269,8 @@
         <h2>Location & Route</h2>
         <div class="map">
           <iframe
-            src="https://www.google.com/maps?q=Kaas%20Plateau,%20Maharashtra&output=embed"
+            src="https://www.google.com/maps?q=Wilson%20Point%20Mahabaleshwar&output=embed"
             loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
           ></iframe>
         </div>
       </div>
@@ -313,21 +282,21 @@
         <h2>Choose Your Experience</h2>
         <div class="package-grid">
           <div class="package-card">
-            <h3>Single Spot Visit</h3>
-            <p class="muted">Perfect for short and peaceful exploration</p>
-            <div class="price">₹500 – ₹700</div>
-            <a href="/HTML/book.html?place=kaas&type=single" class="btn green"
-              >Book Single Visit</a
-            >
+            <h3>Wilson Point Visit</h3>
+            <p class="muted">Ideal for sunrise lovers</p>
+            <div class="price">₹400 – ₹600</div>
+            <a href="/HTML/book.html?place=wilson&type=single" class="btn green">
+              Book Visit
+            </a>
           </div>
 
           <div class="package-card">
-            <h3>Full Satara Scenic Tour</h3>
-            <p class="muted">Includes Kaas, Thoseghar & Chalkewadi</p>
-            <div class="price">₹5000</div>
-            <a href="/HTML/book.html?place=kaas&type=full" class="btn green"
-              >Book Full Tour</a
-            >
+            <h3>Mahabaleshwar Full Tour</h3>
+            <p class="muted">Wilson Point, Mapro, Elephant’s Head</p>
+            <div class="price">₹4500</div>
+            <a href="/HTML/book.html?place=wilson&type=full" class="btn green">
+              Book Full Tour
+            </a>
           </div>
         </div>
       </div>
@@ -340,13 +309,13 @@
         <div class="review-grid">
           <div class="review">
             <div class="stars">★★★★★</div>
-            <p>Absolutely magical during monsoon. A must visit.</p>
-            <strong>— Rohit, Pune</strong>
+            <p>Sunrise view is absolutely stunning.</p>
+            <strong>— Akash, Satara</strong>
           </div>
           <div class="review">
             <div class="stars">★★★★☆</div>
-            <p>Beautiful and peaceful. Well managed.</p>
-            <strong>— Anjali, Mumbai</strong>
+            <p>Best viewpoint in Mahabaleshwar.</p>
+            <strong>— Neha, Pune</strong>
           </div>
         </div>
       </div>
@@ -354,8 +323,8 @@
 
     <!-- FINAL CTA -->
     <div class="final-cta">
-      <h2>Ready to Explore Kaas Plateau?</h2>
-      <p>Choose your package and start your journey with Tourably</p>
+      <h2>Ready to Visit Wilson Point?</h2>
+      <p>Book your Mahabaleshwar trip with Tourably</p>
       <a href="#packages" class="btn outline">Book Now</a>
     </div>
   </body>
