--- a/Yavteshwartempleandtreak.html
+++ b/Yavteshwartempleandtreak.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kaas Plateau – Tourably</title>
+    <title>Yavateshwar Temple & Trek – Tourably</title>
 
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
@@ -46,11 +46,10 @@
         color: inherit;
       }
 
-      /* HERO */
       .hero {
         height: 90vh;
-        background: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.7)),
-          url("/Images/kaas.jpg") center/cover no-repeat;
+        background: linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.7)),
+          url("/Images/yavateshwar-hero.jpg") center/cover no-repeat;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -84,6 +83,7 @@
         background: var(--green);
         color: #fff;
       }
+
       .btn.outline {
         border: 2px solid #fff;
         color: #fff;
@@ -94,7 +94,6 @@
         box-shadow: var(--shadow);
       }
 
-      /* INFO BAR */
       .info-bar {
         max-width: 1100px;
         margin: -50px auto 80px;
@@ -116,7 +115,6 @@
         font-size: 1.05rem;
       }
 
-      /* SECTIONS */
       section {
         padding: 80px 20px;
       }
@@ -135,17 +133,10 @@
         color: var(--muted);
       }
 
-      /* ABOUT */
       .about {
         background: var(--bg-soft-green);
       }
 
-      .about p {
-        max-width: 800px;
-        font-size: 1.05rem;
-      }
-
-      /* GALLERY */
       .gallery {
         background: var(--bg-soft-blue);
       }
@@ -164,7 +155,6 @@
         box-shadow: var(--shadow);
       }
 
-      /* MAP */
       .map iframe {
         width: 100%;
         height: 420px;
@@ -173,7 +163,6 @@
         box-shadow: var(--shadow);
       }
 
-      /* PACKAGES */
       .packages {
         background: var(--bg-soft-yellow);
       }
@@ -200,7 +189,6 @@
         color: var(--green);
       }
 
-      /* REVIEWS */
       .reviews {
         background: var(--bg-soft-blue);
       }
@@ -222,31 +210,21 @@
         color: var(--yellow);
       }
 
-      /* FINAL CTA */
       .final-cta {
         background: linear-gradient(135deg, #16a34a, #22c55e);
         color: #fff;
         text-align: center;
         padding: 80px 20px;
       }
-
-      .final-cta h2 {
-        margin-bottom: 12px;
-      }
-
-      .hero{
-        background-image:   url(/Images/kass1.png);
-        background-repeat: no-repeat;
-        background-size: cover;
-      }
     </style>
   </head>
+
   <body>
     <!-- HERO -->
     <div class="hero">
       <div>
-        <h1>Kaas Plateau</h1>
-        <p>UNESCO World Natural Heritage • Maharashtra’s Valley of Flowers</p>
+        <h1>Yavateshwar Temple & Trek</h1>
+        <p>Spiritual Temple & Scenic Trek • Satara, Maharashtra</p>
         <a href="#packages" class="btn green">View Packages</a>
         <a href="#about" class="btn outline">Explore More</a>
       </div>
@@ -255,28 +233,28 @@
     <!-- INFO BAR -->
     <div class="info-bar">
       <div class="info-item">
-        <span> Distance</span><strong>24 km from Satara</strong>
+        <span>📍 Location</span><strong>Satara, Maharashtra</strong>
       </div>
       <div class="info-item">
-        <span> Best Time</span><strong>Aug – Oct</strong>
+        <span>🕒 Best Time</span><strong>Oct – Feb</strong>
       </div>
       <div class="info-item">
-        <span> Entry Fee</span><strong>₹100 – ₹150</strong>
+        <span>🎟 Entry Fee</span><strong>Free</strong>
       </div>
       <div class="info-item">
-        <span> Category</span><strong>Nature</strong>
+        <span>🏞 Trek Level</span><strong>Moderate</strong>
       </div>
     </div>
 
     <!-- ABOUT -->
     <section id="about" class="about">
       <div class="container">
-        <h2>About Kaas Plateau</h2>
+        <h2>About Yavateshwar Temple & Trek</h2>
         <p class="muted">
-          Kaas Plateau is a seasonal wonderland near Satara, where thousands of
-          endemic wildflowers bloom during monsoon. Recognized as a UNESCO World
-          Natural Heritage Site, it offers unmatched biodiversity, photography
-          opportunities, and peaceful nature experiences.
+          Yavateshwar Temple is a serene temple atop a hill in Satara, famous for
+          its spiritual ambiance and scenic trekking routes. Visitors enjoy a
+          combination of devotion and adventure with panoramic views of the Western
+          Ghats.
         </p>
       </div>
     </section>
@@ -286,9 +264,9 @@
       <div class="container">
         <h2>Gallery</h2>
         <div class="gallery-grid">
-          <img src="/Images/kassV2.avif" />
-          <img src="/Images/kassV3.jpeg" />
-          <img src="/Images/KassV4.jpg" />
+          <img src="/Images/yavateshwar1.jpg" />
+          <img src="/Images/yavateshwar2.jpg" />
+          <img src="/Images/yavateshwar3.jpg" />
         </div>
       </div>
     </section>
@@ -299,9 +277,8 @@
         <h2>Location & Route</h2>
         <div class="map">
           <iframe
-            src="https://www.google.com/maps?q=Kaas%20Plateau,%20Maharashtra&output=embed"
+            src="https://www.google.com/maps?q=Yavateshwar%20Temple,%20Satara&output=embed"
             loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
           ></iframe>
         </div>
       </div>
@@ -313,21 +290,21 @@
         <h2>Choose Your Experience</h2>
         <div class="package-grid">
           <div class="package-card">
-            <h3>Single Spot Visit</h3>
-            <p class="muted">Perfect for short and peaceful exploration</p>
-            <div class="price">₹500 – ₹700</div>
-            <a href="/HTML/book.html?place=kaas&type=single" class="btn green"
-              >Book Single Visit</a
-            >
+            <h3>Temple Visit</h3>
+            <p class="muted">Peaceful visit to Yavateshwar Temple</p>
+            <div class="price">Free</div>
+            <a href="/HTML/book.html?place=yavateshwar&type=visit" class="btn green">
+              Book Visit
+            </a>
           </div>
 
           <div class="package-card">
-            <h3>Full Satara Scenic Tour</h3>
-            <p class="muted">Includes Kaas, Thoseghar & Chalkewadi</p>
-            <div class="price">₹5000</div>
-            <a href="/HTML/book.html?place=kaas&type=full" class="btn green"
-              >Book Full Tour</a
-            >
+            <h3>Temple + Trek</h3>
+            <p class="muted">Visit the temple and enjoy the scenic trek</p>
+            <div class="price">₹300</div>
+            <a href="/HTML/book.html?place=yavateshwar&type=trek" class="btn green">
+              Book Trek
+            </a>
           </div>
         </div>
       </div>
@@ -336,17 +313,17 @@
     <!-- REVIEWS -->
     <section class="reviews">
       <div class="container">
-        <h2>Traveler Reviews</h2>
+        <h2>Visitor Reviews</h2>
         <div class="review-grid">
           <div class="review">
             <div class="stars">★★★★★</div>
-            <p>Absolutely magical during monsoon. A must visit.</p>
-            <strong>— Rohit, Pune</strong>
+            <p>A peaceful temple and an amazing trek experience!</p>
+            <strong>— Sameer, Satara</strong>
           </div>
           <div class="review">
             <div class="stars">★★★★☆</div>
-            <p>Beautiful and peaceful. Well managed.</p>
-            <strong>— Anjali, Mumbai</strong>
+            <p>Beautiful hill views, perfect for adventure seekers.</p>
+            <strong>— Priya, Pune</strong>
           </div>
         </div>
       </div>
@@ -354,8 +331,8 @@
 
     <!-- FINAL CTA -->
     <div class="final-cta">
-      <h2>Ready to Explore Kaas Plateau?</h2>
-      <p>Choose your package and start your journey with Tourably</p>
+      <h2>Explore Yavateshwar Temple & Trek</h2>
+      <p>Book your visit and enjoy a spiritual and adventurous journey in Satara</p>
       <a href="#packages" class="btn outline">Book Now</a>
     </div>
   </body>
