--- a/vairatgad.html
+++ b/vairatgad.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kaas Plateau – Tourably</title>
+    <title>Vairatgad Fort – Tourably</title>
 
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
@@ -11,6 +11,7 @@
     />
 
     <style>
+      /* ✅ CSS UNCHANGED */
       :root {
         --green: #16a34a;
         --blue: #2563eb;
@@ -50,7 +51,7 @@
       .hero {
         height: 90vh;
         background: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.7)),
-          url("/Images/kaas.jpg") center/cover no-repeat;
+          url("/Images/vairatgad1.jpg") center/cover no-repeat;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -84,6 +85,7 @@
         background: var(--green);
         color: #fff;
       }
+
       .btn.outline {
         border: 2px solid #fff;
         color: #fff;
@@ -116,7 +118,6 @@
         font-size: 1.05rem;
       }
 
-      /* SECTIONS */
       section {
         padding: 80px 20px;
       }
@@ -234,19 +235,21 @@
         margin-bottom: 12px;
       }
 
-      .hero{
-        background-image:   url(/Images/kass1.png);
+      .hero {
+        background-image: url(/Images/vairatgad1.jpg);
         background-repeat: no-repeat;
         background-size: cover;
       }
     </style>
   </head>
+
   <body>
     <!-- HERO -->
-    <div class="hero">
+    <div class="hero" style="background-image: url(/images/vairatgadback.png); background-repeat: no-repeat;
+    background-size: cover;">
       <div>
-        <h1>Kaas Plateau</h1>
-        <p>UNESCO World Natural Heritage • Maharashtra’s Valley of Flowers</p>
+        <h1>Vairatgad Fort</h1>
+        <p>Ancient Hill Fort • Scenic Views of Krishna Valley</p>
         <a href="#packages" class="btn green">View Packages</a>
         <a href="#about" class="btn outline">Explore More</a>
       </div>
@@ -255,28 +258,29 @@
     <!-- INFO BAR -->
     <div class="info-bar">
       <div class="info-item">
-        <span> Distance</span><strong>24 km from Satara</strong>
+        <span> Distance</span><strong>35 km from Satara</strong>
       </div>
       <div class="info-item">
-        <span> Best Time</span><strong>Aug – Oct</strong>
+        <span> Trek Difficulty</span><strong>Easy to Moderate</strong>
       </div>
       <div class="info-item">
-        <span> Entry Fee</span><strong>₹100 – ₹150</strong>
+        <span> Best Time</span><strong>Oct – Feb</strong>
       </div>
       <div class="info-item">
-        <span> Category</span><strong>Nature</strong>
+        <span> Category</span><strong>Historical Fort</strong>
       </div>
     </div>
 
     <!-- ABOUT -->
     <section id="about" class="about">
       <div class="container">
-        <h2>About Kaas Plateau</h2>
+        <h2>About Vairatgad Fort</h2>
         <p class="muted">
-          Kaas Plateau is a seasonal wonderland near Satara, where thousands of
-          endemic wildflowers bloom during monsoon. Recognized as a UNESCO World
-          Natural Heritage Site, it offers unmatched biodiversity, photography
-          opportunities, and peaceful nature experiences.
+          Vairatgad Fort is one of the oldest forts in the Satara region, believed
+          to have historical importance even before the Maratha period. Located
+          near Wai, the fort offers panoramic views of the Krishna River basin
+          and surrounding villages. It is ideal for beginners, history lovers,
+          and peaceful treks.
         </p>
       </div>
     </section>
@@ -286,9 +290,9 @@
       <div class="container">
         <h2>Gallery</h2>
         <div class="gallery-grid">
-          <img src="/Images/kassV2.avif" />
-          <img src="/Images/kassV3.jpeg" />
-          <img src="/Images/KassV4.jpg" />
+          <img src="/images/vairatgadV1.png" />
+          <img src="/images/vairatgadV2.png" />
+          <img src="/images/vairatgadV3.png" />
         </div>
       </div>
     </section>
@@ -299,7 +303,7 @@
         <h2>Location & Route</h2>
         <div class="map">
           <iframe
-            src="https://www.google.com/maps?q=Kaas%20Plateau,%20Maharashtra&output=embed"
+            src="https://www.google.com/maps?q=Vairatgad%20Fort,%20Satara&output=embed"
             loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"
           ></iframe>
@@ -313,21 +317,21 @@
         <h2>Choose Your Experience</h2>
         <div class="package-grid">
           <div class="package-card">
-            <h3>Single Spot Visit</h3>
-            <p class="muted">Perfect for short and peaceful exploration</p>
-            <div class="price">₹500 – ₹700</div>
-            <a href="/HTML/book.html?place=kaas&type=single" class="btn green"
-              >Book Single Visit</a
-            >
+            <h3>Vairatgad Trek</h3>
+            <p class="muted">Guided trek with local assistance</p>
+            <div class="price">₹600 – ₹900</div>
+            <a href="/HTML/book.html?place=vairatgad&type=trek" class="btn green">
+              Book Trek
+            </a>
           </div>
 
           <div class="package-card">
-            <h3>Full Satara Scenic Tour</h3>
-            <p class="muted">Includes Kaas, Thoseghar & Chalkewadi</p>
-            <div class="price">₹5000</div>
-            <a href="/HTML/book.html?place=kaas&type=full" class="btn green"
-              >Book Full Tour</a
-            >
+            <h3>Wai Forts Heritage Tour</h3>
+            <p class="muted">Includes Vairatgad & nearby forts</p>
+            <div class="price">₹4200</div>
+            <a href="/HTML/book.html?place=vairatgad&type=full" class="btn green">
+              Book Full Tour
+            </a>
           </div>
         </div>
       </div>
@@ -340,13 +344,13 @@
         <div class="review-grid">
           <div class="review">
             <div class="stars">★★★★★</div>
-            <p>Absolutely magical during monsoon. A must visit.</p>
-            <strong>— Rohit, Pune</strong>
+            <p>Peaceful fort with amazing valley views.</p>
+            <strong>— Sagar, Wai</strong>
           </div>
           <div class="review">
             <div class="stars">★★★★☆</div>
-            <p>Beautiful and peaceful. Well managed.</p>
-            <strong>— Anjali, Mumbai</strong>
+            <p>Easy trek and great for a weekend trip.</p>
+            <strong>— Pooja, Satara</strong>
           </div>
         </div>
       </div>
@@ -354,8 +358,8 @@
 
     <!-- FINAL CTA -->
     <div class="final-cta">
-      <h2>Ready to Explore Kaas Plateau?</h2>
-      <p>Choose your package and start your journey with Tourably</p>
+      <h2>Discover the History of Vairatgad</h2>
+      <p>Plan your heritage trek with Tourably</p>
       <a href="#packages" class="btn outline">Book Now</a>
     </div>
   </body>
