--- a/vintagemiles.html
+++ b/vintagemiles.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kaas Plateau – Tourably</title>
+    <title>Vintage Miles – Tourably</title>
 
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
@@ -19,9 +19,9 @@
         --muted: #64748b;
 
         --bg-main: #f8fafc;
-        --bg-soft-green: linear-gradient(135deg, #ecfdf5, #f0fdf4);
-        --bg-soft-blue: linear-gradient(135deg, #eff6ff, #f8fafc);
-        --bg-soft-yellow: linear-gradient(135deg, #fefce8, #ffffff);
+        --bg-soft-green: linear-gradient(135deg, #fef8f0, #fdf3e7);
+        --bg-soft-blue: linear-gradient(135deg, #eef2f8, #f8fafc);
+        --bg-soft-yellow: linear-gradient(135deg, #fff8e1, #fffef0);
 
         --card: #ffffff;
         --radius: 18px;
@@ -50,7 +50,7 @@
       .hero {
         height: 90vh;
         background: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.7)),
-          url("/Images/kaas.jpg") center/cover no-repeat;
+          url("/Images/vintage1.jpg") center/cover no-repeat;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -235,7 +235,7 @@
       }
 
       .hero{
-        background-image:   url(/Images/kass1.png);
+        background-image: url(/Images/vintage1.jpg);
         background-repeat: no-repeat;
         background-size: cover;
       }
@@ -245,8 +245,8 @@
     <!-- HERO -->
     <div class="hero">
       <div>
-        <h1>Kaas Plateau</h1>
-        <p>UNESCO World Natural Heritage • Maharashtra’s Valley of Flowers</p>
+        <h1>Vintage Miles</h1>
+        <p>Experience Classic Journeys & Timeless Adventures</p>
         <a href="#packages" class="btn green">View Packages</a>
         <a href="#about" class="btn outline">Explore More</a>
       </div>
@@ -255,28 +255,26 @@
     <!-- INFO BAR -->
     <div class="info-bar">
       <div class="info-item">
-        <span> Distance</span><strong>24 km from Satara</strong>
+        <span>📍 Locations</span><strong>Multiple Heritage Sites</strong>
       </div>
       <div class="info-item">
-        <span> Best Time</span><strong>Aug – Oct</strong>
+        <span>🕒 Best Season</span><strong>All Year Round</strong>
       </div>
       <div class="info-item">
-        <span> Entry Fee</span><strong>₹100 – ₹150</strong>
+        <span>🎟 Starting Price</span><strong>₹500</strong>
       </div>
       <div class="info-item">
-        <span> Category</span><strong>Nature</strong>
+        <span>🌿 Category</span><strong>Heritage & Culture</strong>
       </div>
     </div>
 
     <!-- ABOUT -->
     <section id="about" class="about">
       <div class="container">
-        <h2>About Kaas Plateau</h2>
+        <h2>About Vintage Miles</h2>
         <p class="muted">
-          Kaas Plateau is a seasonal wonderland near Satara, where thousands of
-          endemic wildflowers bloom during monsoon. Recognized as a UNESCO World
-          Natural Heritage Site, it offers unmatched biodiversity, photography
-          opportunities, and peaceful nature experiences.
+          Vintage Miles offers curated travel experiences to historical and heritage destinations. 
+          Explore timeless architecture, classic landscapes, and cultural richness while enjoying immersive tours and personalized journeys.
         </p>
       </div>
     </section>
@@ -286,26 +284,27 @@
       <div class="container">
         <h2>Gallery</h2>
         <div class="gallery-grid">
-          <img src="/Images/kassV2.avif" />
-          <img src="/Images/kassV3.jpeg" />
-          <img src="/Images/KassV4.jpg" />
+          <img src="/Images/vintage1.jpg" />
+          <img src="/Images/vintage2.jpg" />
+          <img src="/Images/vintage3.jpg" />
         </div>
       </div>
     </section>
 
     <!-- MAP -->
     <section>
-      <div class="container">
-        <h2>Location & Route</h2>
-        <div class="map">
-          <iframe
-            src="https://www.google.com/maps?q=Kaas%20Plateau,%20Maharashtra&output=embed"
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
-        </div>
-      </div>
-    </section>
+  <div class="container">
+    <h2>Location & Routes</h2>
+    <div class="map">
+      <iframe
+        src="https://www.google.com/maps?q=Vintage+Miles+Satara&output=embed"
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
+    </div>
+  </div>
+</section>
+
 
     <!-- PACKAGES -->
     <section id="packages" class="packages">
@@ -313,20 +312,20 @@
         <h2>Choose Your Experience</h2>
         <div class="package-grid">
           <div class="package-card">
-            <h3>Single Spot Visit</h3>
-            <p class="muted">Perfect for short and peaceful exploration</p>
-            <div class="price">₹500 – ₹700</div>
-            <a href="/HTML/book.html?place=kaas&type=single" class="btn green"
-              >Book Single Visit</a
+            <h3>Heritage Walk</h3>
+            <p class="muted">Explore historical sites with guided tours</p>
+            <div class="price">₹500 – ₹800</div>
+            <a href="/HTML/book.html?place=vintage&type=walk" class="btn green"
+              >Book Heritage Walk</a
             >
           </div>
 
           <div class="package-card">
-            <h3>Full Satara Scenic Tour</h3>
-            <p class="muted">Includes Kaas, Thoseghar & Chalkewadi</p>
-            <div class="price">₹5000</div>
-            <a href="/HTML/book.html?place=kaas&type=full" class="btn green"
-              >Book Full Tour</a
+            <h3>Classic Road Trip</h3>
+            <p class="muted">Experience scenic drives and timeless destinations</p>
+            <div class="price">₹1500 – ₹3000</div>
+            <a href="/HTML/book.html?place=vintage&type=roadtrip" class="btn green"
+              >Book Road Trip</a
             >
           </div>
         </div>
@@ -340,13 +339,13 @@
         <div class="review-grid">
           <div class="review">
             <div class="stars">★★★★★</div>
-            <p>Absolutely magical during monsoon. A must visit.</p>
-            <strong>— Rohit, Pune</strong>
+            <p>A fantastic journey through India's heritage and culture.</p>
+            <strong>— Rohan, Mumbai</strong>
           </div>
           <div class="review">
             <div class="stars">★★★★☆</div>
-            <p>Beautiful and peaceful. Well managed.</p>
-            <strong>— Anjali, Mumbai</strong>
+            <p>Beautifully curated trips with great attention to detail.</p>
+            <strong>— Meera, Pune</strong>
           </div>
         </div>
       </div>
@@ -354,7 +353,7 @@
 
     <!-- FINAL CTA -->
     <div class="final-cta">
-      <h2>Ready to Explore Kaas Plateau?</h2>
+      <h2>Ready to Explore Vintage Miles?</h2>
       <p>Choose your package and start your journey with Tourably</p>
       <a href="#packages" class="btn outline">Book Now</a>
     </div>
