--- a/yerulwadimonsoonfalls.html
+++ b/yerulwadimonsoonfalls.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kaas Plateau – Tourably</title>
+    <title>Yerulwadi Monsoon Falls – Tourably</title>
 
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
@@ -49,8 +49,8 @@
       /* HERO */
       .hero {
         height: 90vh;
-        background: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.7)),
-          url("/Images/kaas.jpg") center/cover no-repeat;
+        background: linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.7)),
+          url("/Images/yerulwadi_hero.jpg") center/cover no-repeat;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -235,7 +235,7 @@
       }
 
       .hero{
-        background-image:   url(/Images/kass1.png);
+        background-image: url(/Images/yerulwadi_hero.jpg);
         background-repeat: no-repeat;
         background-size: cover;
       }
@@ -245,8 +245,8 @@
     <!-- HERO -->
     <div class="hero">
       <div>
-        <h1>Kaas Plateau</h1>
-        <p>UNESCO World Natural Heritage • Maharashtra’s Valley of Flowers</p>
+        <h1>Yerulwadi Monsoon Falls</h1>
+        <p>Hidden Monsoon Waterfall • Nature’s Serenity in Satara</p>
         <a href="#packages" class="btn green">View Packages</a>
         <a href="#about" class="btn outline">Explore More</a>
       </div>
@@ -255,28 +255,26 @@
     <!-- INFO BAR -->
     <div class="info-bar">
       <div class="info-item">
-        <span> Distance</span><strong>24 km from Satara</strong>
+        <span>📍 Location</span><strong>Satara, Maharashtra</strong>
       </div>
       <div class="info-item">
-        <span> Best Time</span><strong>Aug – Oct</strong>
+        <span>🕒 Best Time</span><strong>Jun – Sep</strong>
       </div>
       <div class="info-item">
-        <span> Entry Fee</span><strong>₹100 – ₹150</strong>
+        <span>🎟 Entry Fee</span><strong>Free</strong>
       </div>
       <div class="info-item">
-        <span> Category</span><strong>Nature</strong>
+        <span>🌿 Category</span><strong>Nature & Adventure</strong>
       </div>
     </div>
 
     <!-- ABOUT -->
     <section id="about" class="about">
       <div class="container">
-        <h2>About Kaas Plateau</h2>
+        <h2>About Yerulwadi Monsoon Falls</h2>
         <p class="muted">
-          Kaas Plateau is a seasonal wonderland near Satara, where thousands of
-          endemic wildflowers bloom during monsoon. Recognized as a UNESCO World
-          Natural Heritage Site, it offers unmatched biodiversity, photography
-          opportunities, and peaceful nature experiences.
+          Yerulwadi Monsoon Falls is a hidden gem in Satara, surrounded by lush forests and hills.
+          It is ideal for trekking, photography, and enjoying the serene monsoon beauty.
         </p>
       </div>
     </section>
@@ -286,26 +284,27 @@
       <div class="container">
         <h2>Gallery</h2>
         <div class="gallery-grid">
-          <img src="/Images/kassV2.avif" />
-          <img src="/Images/kassV3.jpeg" />
-          <img src="/Images/KassV4.jpg" />
+          <img src="/Images/yerulwadi1.jpg" />
+          <img src="/Images/yerulwadi2.jpg" />
+          <img src="/Images/yerulwadi3.jpg" />
         </div>
       </div>
     </section>
 
     <!-- MAP -->
-    <section>
-      <div class="container">
-        <h2>Location & Route</h2>
-        <div class="map">
-          <iframe
-            src="https://www.google.com/maps?q=Kaas%20Plateau,%20Maharashtra&output=embed"
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
-        </div>
-      </div>
-    </section>
+   <section>
+  <div class="container">
+    <h2>Location & Route</h2>
+    <div class="map">
+      <iframe
+        src="https://www.google.com/maps?q=Yerulwadi+Monsoon+Falls+Satara&output=embed"
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
+    </div>
+  </div>
+</section>
+
 
     <!-- PACKAGES -->
     <section id="packages" class="packages">
@@ -313,20 +312,20 @@
         <h2>Choose Your Experience</h2>
         <div class="package-grid">
           <div class="package-card">
-            <h3>Single Spot Visit</h3>
-            <p class="muted">Perfect for short and peaceful exploration</p>
-            <div class="price">₹500 – ₹700</div>
-            <a href="/HTML/book.html?place=kaas&type=single" class="btn green"
-              >Book Single Visit</a
+            <h3>Trekking Adventure</h3>
+            <p class="muted">Trek through forests to reach the waterfall</p>
+            <div class="price">₹0 – ₹0</div>
+            <a href="/HTML/book.html?place=yerulwadi&type=trek" class="btn green"
+              >Book Trek</a
             >
           </div>
 
           <div class="package-card">
-            <h3>Full Satara Scenic Tour</h3>
-            <p class="muted">Includes Kaas, Thoseghar & Chalkewadi</p>
-            <div class="price">₹5000</div>
-            <a href="/HTML/book.html?place=kaas&type=full" class="btn green"
-              >Book Full Tour</a
+            <h3>Nature Picnic</h3>
+            <p class="muted">Relax and enjoy the falls and greenery</p>
+            <div class="price">₹0 – ₹0</div>
+            <a href="/HTML/book.html?place=yerulwadi&type=picnic" class="btn green"
+              >Book Picnic</a
             >
           </div>
         </div>
@@ -340,13 +339,13 @@
         <div class="review-grid">
           <div class="review">
             <div class="stars">★★★★★</div>
-            <p>Absolutely magical during monsoon. A must visit.</p>
-            <strong>— Rohit, Pune</strong>
+            <p>Amazing hidden waterfall. Trekking through forest was refreshing!</p>
+            <strong>— Aditi, Pune</strong>
           </div>
           <div class="review">
             <div class="stars">★★★★☆</div>
-            <p>Beautiful and peaceful. Well managed.</p>
-            <strong>— Anjali, Mumbai</strong>
+            <p>Peaceful location with beautiful scenery. Loved the greenery.</p>
+            <strong>— Sameer, Satara</strong>
           </div>
         </div>
       </div>
@@ -354,8 +353,8 @@
 
     <!-- FINAL CTA -->
     <div class="final-cta">
-      <h2>Ready to Explore Kaas Plateau?</h2>
-      <p>Choose your package and start your journey with Tourably</p>
+      <h2>Ready to Explore Yerulwadi Monsoon Falls?</h2>
+      <p>Plan your trek and nature getaway with Tourably</p>
       <a href="#packages" class="btn outline">Book Now</a>
     </div>
   </body>
