--- a/varugad.html
+++ b/varugad.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kaas Plateau – Tourably</title>
+    <title>Varugad Fort – Tourably</title>
 
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
@@ -11,6 +11,7 @@
     />
 
     <style>
+      /* ✅ CSS UNCHANGED */
       :root {
         --green: #16a34a;
         --blue: #2563eb;
@@ -46,16 +47,18 @@
         color: inherit;
       }
 
-      /* HERO */
       .hero {
         height: 90vh;
         background: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.7)),
-          url("/Images/kaas.jpg") center/cover no-repeat;
+          url("/Images/varugad1.jpg") center/cover no-repeat;
         display: flex;
         align-items: center;
         justify-content: center;
         text-align: center;
         color: #fff;
+        background-image: url(/images/varugadback.png);
+        background-size: cover;
+        background-repeat: no-repeat;
       }
 
       .hero h1 {
@@ -84,6 +87,7 @@
         background: var(--green);
         color: #fff;
       }
+
       .btn.outline {
         border: 2px solid #fff;
         color: #fff;
@@ -94,7 +98,6 @@
         box-shadow: var(--shadow);
       }
 
-      /* INFO BAR */
       .info-bar {
         max-width: 1100px;
         margin: -50px auto 80px;
@@ -116,7 +119,6 @@
         font-size: 1.05rem;
       }
 
-      /* SECTIONS */
       section {
         padding: 80px 20px;
       }
@@ -135,17 +137,10 @@
         color: var(--muted);
       }
 
-      /* ABOUT */
       .about {
         background: var(--bg-soft-green);
       }
 
-      .about p {
-        max-width: 800px;
-        font-size: 1.05rem;
-      }
-
-      /* GALLERY */
       .gallery {
         background: var(--bg-soft-blue);
       }
@@ -164,7 +159,6 @@
         box-shadow: var(--shadow);
       }
 
-      /* MAP */
       .map iframe {
         width: 100%;
         height: 420px;
@@ -173,7 +167,6 @@
         box-shadow: var(--shadow);
       }
 
-      /* PACKAGES */
       .packages {
         background: var(--bg-soft-yellow);
       }
@@ -200,15 +193,8 @@
         color: var(--green);
       }
 
-      /* REVIEWS */
       .reviews {
         background: var(--bg-soft-blue);
-      }
-
-      .review-grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-        gap: 24px;
       }
 
       .review {
@@ -222,31 +208,21 @@
         color: var(--yellow);
       }
 
-      /* FINAL CTA */
       .final-cta {
         background: linear-gradient(135deg, #16a34a, #22c55e);
         color: #fff;
         text-align: center;
         padding: 80px 20px;
       }
-
-      .final-cta h2 {
-        margin-bottom: 12px;
-      }
-
-      .hero{
-        background-image:   url(/Images/kass1.png);
-        background-repeat: no-repeat;
-        background-size: cover;
-      }
     </style>
   </head>
+
   <body>
     <!-- HERO -->
     <div class="hero">
       <div>
-        <h1>Kaas Plateau</h1>
-        <p>UNESCO World Natural Heritage • Maharashtra’s Valley of Flowers</p>
+        <h1>Varugad Fort</h1>
+        <p>Historic Hill Fort • Hidden Gem of Satara</p>
         <a href="#packages" class="btn green">View Packages</a>
         <a href="#about" class="btn outline">Explore More</a>
       </div>
@@ -255,28 +231,28 @@
     <!-- INFO BAR -->
     <div class="info-bar">
       <div class="info-item">
-        <span> Distance</span><strong>24 km from Satara</strong>
+        <span>📍 Distance</span><strong>40 km from Satara</strong>
       </div>
       <div class="info-item">
-        <span> Best Time</span><strong>Aug – Oct</strong>
+        <span>🥾 Trek Difficulty</span><strong>Easy to Moderate</strong>
       </div>
       <div class="info-item">
-        <span> Entry Fee</span><strong>₹100 – ₹150</strong>
+        <span>🕒 Best Time</span><strong>Oct – Feb</strong>
       </div>
       <div class="info-item">
-        <span> Category</span><strong>Nature</strong>
+        <span>🏰 Category</span><strong>Hill Fort</strong>
       </div>
     </div>
 
     <!-- ABOUT -->
     <section id="about" class="about">
       <div class="container">
-        <h2>About Kaas Plateau</h2>
+        <h2>About Varugad Fort</h2>
         <p class="muted">
-          Kaas Plateau is a seasonal wonderland near Satara, where thousands of
-          endemic wildflowers bloom during monsoon. Recognized as a UNESCO World
-          Natural Heritage Site, it offers unmatched biodiversity, photography
-          opportunities, and peaceful nature experiences.
+          Varugad Fort is a lesser-known historical fort located near Satara.
+          Surrounded by hills and greenery, the fort offers calm trekking routes,
+          scenic viewpoints, and a peaceful experience away from crowds.
+          It is perfect for beginners and nature lovers.
         </p>
       </div>
     </section>
@@ -286,9 +262,9 @@
       <div class="container">
         <h2>Gallery</h2>
         <div class="gallery-grid">
-          <img src="/Images/kassV2.avif" />
-          <img src="/Images/kassV3.jpeg" />
-          <img src="/Images/KassV4.jpg" />
+          <img src="/images/varugadV1.png" />
+          <img src="/images/varugadV2.png" />
+          <img src="/images/varugadV3.png" />
         </div>
       </div>
     </section>
@@ -299,9 +275,8 @@
         <h2>Location & Route</h2>
         <div class="map">
           <iframe
-            src="https://www.google.com/maps?q=Kaas%20Plateau,%20Maharashtra&output=embed"
+            src="https://www.google.com/maps?q=Varugad%20Fort,%20Satara&output=embed"
             loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
           ></iframe>
         </div>
       </div>
@@ -313,21 +288,21 @@
         <h2>Choose Your Experience</h2>
         <div class="package-grid">
           <div class="package-card">
-            <h3>Single Spot Visit</h3>
-            <p class="muted">Perfect for short and peaceful exploration</p>
-            <div class="price">₹500 – ₹700</div>
-            <a href="/HTML/book.html?place=kaas&type=single" class="btn green"
-              >Book Single Visit</a
-            >
+            <h3>Varugad Trek</h3>
+            <p class="muted">Guided trek with local support</p>
+            <div class="price">₹700 – ₹1000</div>
+            <a href="/HTML/book.html?place=varugad&type=trek" class="btn green">
+              Book Trek
+            </a>
           </div>
 
           <div class="package-card">
-            <h3>Full Satara Scenic Tour</h3>
-            <p class="muted">Includes Kaas, Thoseghar & Chalkewadi</p>
-            <div class="price">₹5000</div>
-            <a href="/HTML/book.html?place=kaas&type=full" class="btn green"
-              >Book Full Tour</a
-            >
+            <h3>Satara Forts Tour</h3>
+            <p class="muted">Includes Varugad & nearby forts</p>
+            <div class="price">₹4500</div>
+            <a href="/HTML/book.html?place=varugad&type=full" class="btn green">
+              Book Full Tour
+            </a>
           </div>
         </div>
       </div>
@@ -340,13 +315,13 @@
         <div class="review-grid">
           <div class="review">
             <div class="stars">★★★★★</div>
-            <p>Absolutely magical during monsoon. A must visit.</p>
-            <strong>— Rohit, Pune</strong>
+            <p>Very peaceful fort with beautiful views.</p>
+            <strong>— Pratik, Satara</strong>
           </div>
           <div class="review">
             <div class="stars">★★★★☆</div>
-            <p>Beautiful and peaceful. Well managed.</p>
-            <strong>— Anjali, Mumbai</strong>
+            <p>Easy trek and great for beginners.</p>
+            <strong>— Neha, Pune</strong>
           </div>
         </div>
       </div>
@@ -354,8 +329,8 @@
 
     <!-- FINAL CTA -->
     <div class="final-cta">
-      <h2>Ready to Explore Kaas Plateau?</h2>
-      <p>Choose your package and start your journey with Tourably</p>
+      <h2>Explore the Calm of Varugad Fort</h2>
+      <p>Book your heritage experience with Tourably</p>
       <a href="#packages" class="btn outline">Book Now</a>
     </div>
   </body>
